--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,16 +1,31 @@
-name: Deploy Project
+name: Test Project
 on: push
 jobs:
-    test:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Get code
-              uses: actions/checkout@v3
-            - name: Set up node
-              uses: actions/setup-node@v3
-              with:
-                  node-version: '18'
-            - name: Install dependencies
-              run: npm ci
-            - name: Run tests
-              run: npm test              
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get code
+        uses: actions/checkout@v3
+      - name: Set up node
+        uses: actions/setup-node@v3
+        with:
+          node-version: "18"
+      - name: Install dependencies
+        run: npm ci
+      - name: Run tests
+        run: npm test
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get code
+        uses: actions/checkout@v3
+      - name: Set up node
+        uses: actions/setup-node@v3
+        with:
+          node-version: "18"
+      - name: Install dependencies
+        run: npm ci
+      - name: Build application
+        run: npm run build
+      - name: Deploy application
+        run: echo "Deploying application..."
